--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+
+		<link rel="manifest" href="/manifest.json">
+
+		<meta name="theme-color" content="white"/>
+
+		<link rel="icon" href="favicon.ico" type="image/x-icon" />  
+<link rel="apple-touch-icon" href="images/hello-icon-152.png">   
+<meta name="theme-color" content="white"/>  
+<meta name="apple-mobile-web-app-capable" content="yes">  
+<meta name="apple-mobile-web-app-status-bar-style" content="black"> 
+<meta name="apple-mobile-web-app-title" content="Hello World"> 
+<meta name="msapplication-TileImage" content="images/hello-icon-144.png">  
+<meta name="msapplication-TileColor" content="#FFFFFF">
 		
 	</head>
 	<body class="is-preload">
@@ -470,19 +483,14 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 
 			<script type="module">
 				
-    //This is the "Offline page" service worker
+				indow.onload = () => {
+  'use strict';
 
-  //Add this below content to your HTML page, or add the js file to your page at the very top to register sercie worker
-  if (navigator.serviceWorker.controller) {
-    console.log('[PWA Builder] active service worker found, no need to register')
-  } else {
-    //Register the ServiceWorker
-    navigator.serviceWorker.register('pwabuider-sw.js', {
-      scope: './'
-    }).then(function(reg) {
-      console.log('Service worker has been registered for scope:'+ reg.scope);
-    });
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker
+             .register('./sw.js');
   }
+}
   
 			</script>
 
