--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 
 			<script type="module">
 				
-				indow.onload = () => {
+				window.onload = () => {
   'use strict';
 
   if ('serviceWorker' in navigator) {
