--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<meta name="keywords" content="" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 
-		<link rel="manifest" href="/manifest.json">
+		<link rel="manifest" href="manifest.json">
 
 		<meta name="theme-color" content="white"/>
 
@@ -488,7 +488,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 
   if ('serviceWorker' in navigator) {
     navigator.serviceWorker
-             .register('./sw.js');
+             .register('sw.js');
   }
 }
   
